--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,12 +49,6 @@
             android:launchMode="singleTop"
             android:theme="@style/Theme.Material3.DayNight.NoActionBar" />
         <activity
-            android:name=".activities.BookingActivity"
-            android:exported="false"
-            android:label="@string/title_booking"
-            android:launchMode="singleTop"
-            android:parentActivityName=".activities.EventActivity" />
-        <activity
             android:name=".activities.CouponActivity"
             android:exported="false"
             android:label="@string/title_coupon"
@@ -97,9 +91,9 @@
             android:launchMode="singleTop"
             android:parentActivityName=".activities.AccountActivity" />
         <activity
-            android:name=".activities.EventActivity"
+            android:name=".activities.LocationActivity"
             android:exported="false"
-            android:label="@string/title_event"
+            android:label="@string/title_location"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/Theme.Material3.DayNight.NoActionBar" />
